<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.yiyue.store.component.databind.ClickHandler" />

        <variable
            name="click"
            type="ClickHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.yiyue.store.widget.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/about" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha_95_white"
            android:orientation="vertical">

            <!--无新版本-->
            <LinearLayout
                android:id="@+id/ll_not_new_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_hint1"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <!--有新版本-->
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_have_new_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_hint2"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_new_version_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0.0"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_hint3"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_marginLeft="@dimen/dp_5"
                    android:id="@+id/tv_immediately_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{click.onClick}"
                    android:text="@string/version_hint4"
                    android:textColor="@color/text_bg"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

                <ImageView
                    android:layout_marginTop="@dimen/dp_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_02"
                    android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/text_bg"
                    android:textSize="@dimen/sp_18"/>

                <TextView
                    android:id="@+id/tv_current_version_code"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(V1.0.0)"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30">

                <TextView
                    android:lineSpacingExtra="@dimen/dp_1_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text1"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/alpha_95_black"/>

                <TextView
                    android:lineSpacingExtra="@dimen/dp_1_2"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text2"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/alpha_95_black"/>

                <TextView
                    android:lineSpacingExtra="@dimen/dp_1_2"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text3"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/alpha_95_black"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"/>

            <TextView
                android:layout_marginBottom="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/copyright_text"/>


        </LinearLayout>

    </LinearLayout>
</layout>