<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.yiyue.store.component.databind.ClickHandler" />

        <variable
            name="click"
            type="ClickHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_95_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.yiyue.store.widget.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/perfect_information"
            app:isHome="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">

            <!--上传头像-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_88"
                    android:layout_height="@dimen/dp_88"
                    android:layout_centerVertical="true"
                    android:text="@string/up_head_photo"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_20" />

                <com.yl.core.widget.CircleImageView
                    android:id="@+id/iv_head_photo"
                    android:onClick="@{click.onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_30"
                    android:src="@drawable/add_head_photo" />

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/edittext_bg_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:text="@string/user_gender"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:background="@null"
                        android:id="@+id/rb_man"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man"
                        android:textSize="@dimen/sp_14"
                        android:checked="true"
                        android:textColor="@color/alpha_95_black"
                        android:drawablePadding="@dimen/dp_5"
                        android:button="@null"
                        android:drawableLeft="@drawable/gender_man_selector"/>

                    <RadioButton
                        android:background="@null"
                        android:id="@+id/rb_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/alpha_95_black"
                        android:drawablePadding="@dimen/dp_5"
                        android:button="@null"
                        android:drawableLeft="@drawable/gender_woman_selector"/>

                </RadioGroup>

            </RelativeLayout>

            <TableRow
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg_grey"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:text="@string/login_password2"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/et_login_password"
                    style="@style/EditTextDefultStyle"
                    android:layout_height="50dp"
                    android:hint="@string/hint_login_password2"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLength="20"/>


            </TableRow>

            <TableRow
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg_grey"
                android:layout_marginTop="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:text="@string/confirm_password"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    style="@style/EditTextDefultStyle"
                    android:layout_height="50dp"
                    android:hint="@string/hint_confirm_password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:singleLine="true"
                    android:text=""
                    android:maxLength="20"/>

            </TableRow>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_btn"
            android:onClick="@{click.onClick}"
            android:text="@string/ok"
            android:textColor="@color/alpha_95_white"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</layout>