<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.yiyue.store.component.databind.ClickHandler" />

        <variable
            name="click"
            type="ClickHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/login_bg">

        <com.yiyue.store.widget.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/evaluation_manager"
            app:title_text_sub="@string/evaluation_num"/>

        <LinearLayout
            android:paddingLeft="@dimen/dp_80"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_110"
            android:background="@color/alpha_95_white"
            android:orientation="vertical">

            <!--综合评分-->
            <LinearLayout
                android:layout_marginTop="@dimen/dp_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comprehensive_evaluation"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_18"/>

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_gravity="center_vertical"
                    android:id="@+id/material_rating_bar"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_name"
                    android:layout_width="@dimen/dp_88"
                    android:layout_height="@dimen/dp_18"
                    android:isIndicator="true"
                    app:mrb_secondaryProgressTint="@color/color_FFA200"
                    app:mrb_progressTint="@color/color_FFA200"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_marginLeft="@dimen/dp_5"/>


            </LinearLayout>

            <!--专业技能-->
            <LinearLayout
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_profession_skill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/environment_grade"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/alpha_95_black"/>
                <TextView
                    android:id="@+id/tv_relative_ratio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relative_ratio_equal"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_color"/>

            </LinearLayout>

            <!--服务态度-->
            <LinearLayout
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_service_attitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_attitude"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/alpha_95_black"/>
                <TextView
                    android:id="@+id/tv_relative_ratio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relative_ratio_equal"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_color"/>

            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/login_bg">
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_view"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>
    </LinearLayout>
</layout>